Update RAG prompt